--- a/index.html
+++ b/index.html
@@ -33,63 +33,63 @@
       <!-- Timeblocks go here -->
       <div class="row time-block" id="9am">
         <div class = "col-lg-1 hour"> 9 AM</div>
-        <textarea class="col-lg-10 description"></textarea>
+        <textarea class="col-lg-10 description" id ="9"></textarea>
         <button class="btn saveBtn col-lg-1"><span class="material-symbols-outlined">
         place_item
         </span></button>
     </div>
       <div class="row time-block" id="10am">
         <div class = "col-md-1 hour"> 10 AM</div>
-        <textarea class="col-lg-10 description"></textarea>
+        <textarea class="col-lg-10 description" id="10"></textarea>
         <button class="btn saveBtn col-lg-1"><span class="material-symbols-outlined">
         place_item
         </span></button>
     </div>
       <div class="row time-block" id="11am">
         <div class = "col-lg-1 hour"> 11 AM</div>
-        <textarea class="col-lg-10 description"></textarea>
+        <textarea class="col-lg-10 description" id="11"></textarea>
         <button class="btn saveBtn col-lg-1"><span class="material-symbols-outlined">
         place_item
         </span></button>
     </div>
       <div class="row time-block" id="12pm">
         <div class = "col-lg-1 hour"> 12 PM</div>
-        <textarea class="col-lg-10 description"></textarea>
+        <textarea class="col-lg-10 description" id="12"></textarea>
         <button class="btn saveBtn col-lg-1"><span class="material-symbols-outlined">
         place_item
         </span></button>
     </div>
       <div class="row time-block" id="1pm">
         <div class = "col-lg-1 hour"> 1 PM</div>
-        <textarea class="col-lg-10 description"></textarea>
+        <textarea class="col-lg-10 description" id="13"></textarea>
         <button class="btn saveBtn col-lg-1"><span class="material-symbols-outlined">
         place_item
         </span></button>
     </div>
       <div class="row time-block" id="2pm">
         <div class = "col-lg-1 hour"> 2 PM</div>
-        <textarea class="col-lg-10 description"></textarea>
+        <textarea class="col-lg-10 description" id="14"></textarea>
         <button class="btn saveBtn col-lg-1"><span class="material-symbols-outlined">
         place_item
         </span></button>
     </div>
       <div class="row time-block" id="3pm">
         <div class = "col-lg-1 hour"> 3 PM</div>
-        <textarea class="col-lg-10 description"></textarea>
+        <textarea class="col-lg-10 description" id="15"></textarea>
         <button class="btn saveBtn col-lg-1"><span class="material-symbols-outlined">
         place_item
         </span></button>
     </div>
       <div class="row time-block" id="4pm">
         <div class = "col-lg-1 hour"> 4 PM</div>
-        <textarea class="col-lg-10 description"></textarea>
+        <textarea class="col-lg-10 description" id="16"></textarea>
         <button class="btn saveBtn col-lg-1"><span class="material-symbols-outlined">
         place_item
         </span></button>
     </div>
       <div class="row time-block" id="5pm">
         <div class = "col-lg-1 hour"> 5 PM</div>
-        <textarea class="col-lg-10 description"></textarea>
+        <textarea class="col-lg-10 description" id="17"></textarea>
         <button class="btn saveBtn col-lg-1"><span class="material-symbols-outlined">
         place_item
         </span></button>
